# wave

./: .gitignore  README.md  ToDo.md  __Release__.md  conf.toml  pip.conf  pyproject.toml  requirements.ini  server.py  wave.py
_static/: Vgs.csv  jinghe_20190.csv  ldsat.csv  leff.csv  qianzhao-example.csv  sqrt.csv  tips.csv  vg.csv
conf/: cnf_anshi.toml  cnf_anshi_bak.toml  cnf_jinghe.toml  cnf_qianzhao.toml  cnf_qianzhao_nanchang.toml  cnf_qianzhao_xiameng.toml  cnf_zhaochi.toml  default.toml  init.toml  init_db_anshi.sql  init_db_qianzhao.sql  init_db_qianzhao_nanchang.sql  init_db_qianzhao_xiameng.sql  robot_init.sql  rpa_datatable.toml  rpa_db.sql  rpa_db.toml  task.toml
deploy/: debug_tips.sql  init_db_jinghe.sql  init_db_zhaochi.sql  network_check.py  ops.sh  start-jupyterlab.sh  test-redis.lua
doc/: AI-Agent框架.dio  ToDo.md  waveFlow框架.dio  数据分析Agent需求说明.md  智能机器助理需求说明.md
generater/: rand_task.py
locales/: i18n.py  i18n.toml
pywave/: __init__.py  __main__.py  cdf.py  csv2mysql_qianzhao_nanchang.py  deployment.py  server.py  setup.py  wave.py  workflow-githubstars.py
pywave/drawer/: 3dmap.py  __init__.py
pywave/generater/: manim-tmp.py  mysqlSync.py  rand_task.py
pywave/image_pre/: __init__.py
pywave/imagefab/: __init__.py  kvm_snapshot.py  preview.py
pywave/loaddata/: mysqlSync.py
pywave/tmp/: bin_wafer_map.py  csvParser.py  e142Parser.py  excel2mysql_qianzhao_xiameng.py  txtParser.py
src/: __init__.py  __main__.py  csv2mysql.py  csv2mysql_qianzhao_xiameng.py  excel2mysql_qianzhao_nanchang.py  excelParser.py  genertater.py  genertater_chart.py  minioSync.py  report2ppt_qianzhao.py  temp_ppts.py  xml2mysql_anshi.py  xmlParser.py
src/generater/: rand_task.py
src/rand_data/: rand_var.py  sync_db.py
tools/jupyterlab/: jupyter-lab.service  pyproject.toml
tools/label-studio/: README.md  config.json  config.yaml  config_bak.json  label-studio.service  ops.sh  pyproject.toml
wave/: __init__.py  txt2mysql_anshi.py
wave/generater/: __init__.py
