[project]
name = "wave"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "connectorx>=0.4.0",
    "crewai[tools]>=0.86.0",
    "mysql-connector-python>=9.1.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars>=1.12.0",
    "pyarrow>=18.0.0",
    "sanic[ext]>=24.6.0",
    "setuptools>=75.3.0",
    "toml>=0.10.2",
    "wheel>=0.45.1",
]
