[project]
name = "pywave"
version = "0.1.0"
description = "数据分析与可视化组件"
authors = [
    { name = "thomas.banrieen", email = "banrieen@163.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.0",
    "click>=8.1.7",
    "connectorx>=0.4.0",
    # "genesis-world>=0.2.1",
    "manim>=0.19.0",
    "mysql-connector-python>=9.1.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars>=1.12.0",
    "pyarrow>=18.0.0",
    "sanic[ext]>=24.6.0",
    "toml>=0.10.2",
    "pyfiglet>=1.0.2",
    "opencv-python>=4.11.0.86",
]

[project.scripts]
wave = "pywave.__main__:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.hatch.build.targets.wave]

[tool.uv]
environments = [
    "sys_platform == 'windows'",
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
    ]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

